cabal-version: 2.2
name: preload-trick
version: 0

synopsis: Example of "preload" trick
category: Example, Development
description:
  We implement mock @http-client-tls@ package using @http-client-openssl@

license:      BSD-3-Clause
license-file: LICENSE
author:       Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:   Oleg Grenrus <oleg.grenrus@iki.fi>

flag openssl
  description: Initialise OpenSSL
  manual: True
  default: False

executable example
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  hs-source-dirs:   example
  main-is:          Example.hs

  build-depends:
    , base   ^>=4.11.1.0
    , github ^>=0.20

  if flag(openssl)
    build-depends: HsOpenSSL ^>=0.11.4.15
