cabal-version: 2.2
name:          cryptohash
version:       0.11.9

synopsis: Example of "preload" trick
category: Example, Development
description:
  Mock some of @cryptohash@

license:      BSD-3-Clause
license-file: LICENSE
author:       Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:   Oleg Grenrus <oleg.grenrus@iki.fi>

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src

  build-depends:
    , base            ^>=4.11.1.0
    , bytestring      ^>=0.10.8.2
    , cryptohash-sha1 ^>=0.11.100.1

  exposed-modules:
    Crypto.Hash
