cabal-version: 2.2
name:          http-client-tls
version:       0.3.5.3

synopsis: Example of "preload" trick
category: Example, Development
description:
  Mock some of @cryptohash@

license:      BSD-3-Clause
license-file: LICENSE
author:       Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:   Oleg Grenrus <oleg.grenrus@iki.fi>

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src

  build-depends:
    , base                ^>=4.11.1.0
    , http-client         ^>= 0.5.14
    , http-client-openssl ^>=0.3.0.0
    , HsOpenSSL           ^>=0.11.4.15

  exposed-modules:
    Network.HTTP.Client.TLS
