cabal-version: 2.2
name:          tls
version:       1.4.1

synopsis: Example of "preload" trick
category: Example, Development
description:
  Mock some of @tls@.

  Actually none is needed

license:      BSD-3-Clause
license-file: LICENSE
author:       Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:   Oleg Grenrus <oleg.grenrus@iki.fi>

library
  default-language: Haskell2010
  build-depends:
    , base            ^>=4.11.1.0
